# fantasyfb

./: .gitignore  CHANGELOG.md  README.md  __init__.py  backtest.py  capture_fixtures.py  cli.py  draft_cockpit.py  draft_prep.py  draft_tools.py  excel_exporter.py  fantasyfb.py  integration_check.py  lineup_optimizer.py  matchup_model.py  mkdocs.yml  model_fitter.py  move_analyzer.py  nfl_data_provider.py  nflreadpy_provider.py  player_data_manager.py  projection_engine.py  projection_engine_v2.py  pyproject.toml  pytest.ini  run_backtest.py  run_tests.py  salary_cap_draft.py  schedule_manager.py  season_simulator.py  snake_draft.py  war_calculator.py  yahoo_client.py
.github/workflows/: docs.yml  publish.yml  test.yml
data/: data_manager.py  yahoo_client.py
docs/: architecture.md  index.md  install.md  quickstart.md  yahoo-oauth.md
docs/api/: data.md  drafts.md  index.md  io.md  league.md  projections.md  scoring.md  sim.md
docs/cli/: draft-prep.md  fantasyfb.md  index.md  salary-cap-draft.md  snake-draft.md
docs/stylesheets/: extra.css
scripts/: build-assets.py  run_bakeoff.py
src/fantasyfb/: __init__.py  cli.py  configs.py  league.py
src/fantasyfb/analysis/: __init__.py  move_analyzer.py  player_analyzer.py  simulator.py  trades.py
src/fantasyfb/core/: league.py  player.py
src/fantasyfb/data/: __init__.py  data_manager.py  nflreadpy_provider.py  player_data_manager.py  yahoo_client.py
src/fantasyfb/drafts/: __init__.py  prep.py  salary_cap.py  salary_cap_cockpit.py  snake.py  snake_cockpit.py  tools.py
src/fantasyfb/io/: __init__.py  email_utils.py  excel_exporter.py
src/fantasyfb/projections/: __init__.py  engine_v2.py  model_fitter.py
src/fantasyfb/scoring/: __init__.py  fantasy_scoring.py  matchup_model.py
src/fantasyfb/sim/: __init__.py  backtest.py  schedule_manager.py  season_simulator.py
src/fantasyfb/utils/: cache.py  config.py  sportsref_nfl.py
tests/: conftest.py  fixtures.py  test_backtest.py  test_best_ball.py  test_data_manager.py  test_draft_cockpit.py  test_draft_tools.py  test_get_rates.py  test_league_init.py  test_league_integration.py  test_matchup_model.py  test_model_fitter.py  test_pipeline.py  test_player_analyzer.py  test_player_data_manager.py  test_projection_engine_v2.py  test_provider.py  test_salary_cap_cockpit.py  test_salary_cap_draft.py  test_scoring_processing.py  test_snake_draft.py  test_sportsref_integration.py  test_suite_real_fixtures.py  test_yahoo_client.py
tests/fixtures/: all_players_real.json  league_schedule_real.json  league_settings_real.json  league_standings_real.json  team_rosters_real.json  user_leagues_real.json
utils/: config.py
