[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasyfb"
version = "0.2.0"
description = "Fantasy football league simulation and optimization tool."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Taylor Firman", email = "tefirman@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "nflreadpy>=0.1.5",
    "pyarrow>=14.0",
    "yahoo-fantasy-api>=2.6",
    "yahoo-oauth>=2.0",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[tool.setuptools]
py-modules = [
    "cli",
    "email_utils",
    "excel_exporter",
    "fantasy_scoring",
    "fantasyfb",
    "league_configs",
    "lineup_optimizer",
    "move_analyzer",
    "nfl_data_provider",
    "nflreadpy_provider",
    "player_data_manager",
    "projection_engine",
    "salary_cap_draft",
    "schedule_manager",
    "season_simulator",
    "snake_draft",
    "war_calculator",
    "yahoo_client",
]
