[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasyfb"
version = "0.4.0"
description = "Fantasy football league simulation and optimization tool."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Taylor Firman", email = "tefirman@gmail.com" }]
keywords = ["fantasy-football", "nfl", "simulation", "yahoo-fantasy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "nflreadpy>=0.1.5",
    "pyarrow>=14.0",
    "yahoo-fantasy-api>=2.6",
    "yahoo-oauth>=2.0",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/tefirman/fantasyfb"
Repository = "https://github.com/tefirman/fantasyfb"
Issues = "https://github.com/tefirman/fantasyfb/issues"

[project.scripts]
fantasyfb = "fantasyfb.league:main"
snake-draft = "fantasyfb.drafts.snake:main"
salary-cap-draft = "fantasyfb.drafts.salary_cap:main"
draft-prep = "fantasyfb.drafts.prep:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fantasyfb*"]
